# serializer version: 1
# name: test_discovered_via_zeroconf
  dict({
    'backup_path': None,
    'backup_share': None,
    'host': '192.168.1.5',
    'mac': list([
      '00-11-32-XX-XX-59',
      '00-11-32-XX-XX-5A',
    ]),
    'password': 'password',
    'port': 5001,
    'ssl': True,
    'username': 'Home_Assistant',
    'verify_ssl': False,
  })
# ---
# name: test_form_ssdp
  dict({
    'backup_path': None,
    'backup_share': None,
    'host': '192.168.1.5',
    'mac': list([
      '00-11-32-XX-XX-59',
      '00-11-32-XX-XX-5A',
    ]),
    'password': 'password',
    'port': 5001,
    'ssl': True,
    'username': 'Home_Assistant',
    'verify_ssl': False,
  })
# ---
# name: test_user
  dict({
    'backup_path': None,
    'backup_share': None,
    'host': 'nas.meontheinternet.com',
    'mac': list([
      '00-11-32-XX-XX-59',
      '00-11-32-XX-XX-5A',
    ]),
    'password': 'password',
    'port': 1234,
    'ssl': True,
    'username': 'Home_Assistant',
    'verify_ssl': False,
  })
# ---
# name: test_user.1
  dict({
    'backup_path': None,
    'backup_share': None,
    'host': 'nas.meontheinternet.com',
    'mac': list([
      '00-11-32-XX-XX-59',
      '00-11-32-XX-XX-5A',
    ]),
    'password': 'password',
    'port': 5000,
    'ssl': False,
    'username': 'Home_Assistant',
    'verify_ssl': False,
  })
# ---
# name: test_user_2sa
  dict({
    'backup_path': None,
    'backup_share': None,
    'device_token': 'Dév!cè_T0k€ñ',
    'host': 'nas.meontheinternet.com',
    'mac': list([
      '00-11-32-XX-XX-59',
      '00-11-32-XX-XX-5A',
    ]),
    'password': 'password',
    'port': 5001,
    'ssl': True,
    'username': 'Home_Assistant',
    'verify_ssl': False,
  })
# ---
# name: test_user_vdsm
  dict({
    'backup_path': None,
    'backup_share': None,
    'host': 'nas.meontheinternet.com',
    'mac': list([
      '00-11-32-XX-XX-59',
      '00-11-32-XX-XX-5A',
    ]),
    'password': 'password',
    'port': 1234,
    'ssl': True,
    'username': 'Home_Assistant',
    'verify_ssl': False,
  })
# ---
# name: test_user_with_filestation
  dict({
    'backup_path': 'automatic_ha_backups',
    'backup_share': '/ha_backup',
    'host': 'nas.meontheinternet.com',
    'mac': list([
      '00-11-32-XX-XX-59',
      '00-11-32-XX-XX-5A',
    ]),
    'password': 'password',
    'port': 1234,
    'ssl': True,
    'username': 'Home_Assistant',
    'verify_ssl': False,
  })
# ---
